@@ -411,8 +411,9 @@ Following the ``General'' section is a table with nine columns containing the fo
 \item[Fix] fix an MCMC parameter (i.e., keep it constant throughout the MCMC run):
   \begin{description}                
   \item[0] no.
-  \item[1] fix to BestValue.
-  \item[2] fix to injection value.
+  \item[1] yes; fix to the starting value determined by \texttt{Start}
+  %\item[1] fix to BestValue.
+  %\item[2] fix to injection value.
   \end{description}                
 \item[Start] where to start the Markov chains:
   \begin{description}                
