@@ -2,6 +2,11 @@
   ChangeLog for SPINspiral code repository.  
   Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
    
+   169: sluys, 12/06/2009
+     - selection of starting parameters with different waveforms
+     - fixed MCMC parameters may now start offset, depending on 'Start'
+     - got rid of some compiler warnings from mcmc_lal.c
+   
    168: sluys, 11/06/2009
      - more Doxygen comments
    
